# nostr-gnn

./: .gitignore  LICENSE  README.adoc  config.local.yaml  config.modal.yaml  config.yaml  pyproject-modal.toml  pyproject.toml
scripts/: download_modal_outputs.sh  upload_model_to_blossom.sh
src/: config.py  eval.py  modal_run.py  run.py  train.py
src/data/: dataset.py
src/models/: graph_sage.py
src/pos_embeddings/: export_embeddings.py  export_model_bin.py
